--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.13.3
   sqflite: ^2.0.0+3
   path: ^1.8.0
+  shared_preferences: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
